Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ url: http://www.carotidbattery.com
 name: carotidbattery.great
 description: 'new stuff here.  old motorcycle stuff at old.carotidbattery.com'
 
-theme: jekyll-theme-dinky
+theme: jekyll-theme-minimal
