--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: http://www.carotidbattery.com
+url: https://www.carotidbattery.com
 name: carotidbattery.great
 description: 'new stuff here.  old motorcycle stuff at old.carotidbattery.com'
 
