--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: https://www.carotidbattery.com
 name: carotidbattery.great
-description: 'new stuff here.  old motorcycle stuff at old.carotidbattery.com'
+description: 'mostly just for me. and for motocompy'
 
 theme: jekyll-theme-minimal
